[package]
name = "statiki"
version = "0.2.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Static friendly data structures"
repository = "https://github.com/DoumanAsh/statiki"
license = "Apache-2.0"
keywords = ["static", "no-heap"]
categories = [
    "data-structures",
    "no-std",
]

[features]
default = []
docs = []

[package.metadata.docs.rs]
features = ["docs"]
