[package]
name = "statiki"
version = "0.4.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Static friendly data structures"
readme = "README.md"
repository = "https://github.com/DoumanAsh/statiki"
documentation = "https://docs.rs/statiki"
license = "Apache-2.0"
keywords = ["static", "no-heap"]
categories = [
    "data-structures",
    "no-std",
]

[dependencies.serde]
version = "1"
default-features = false
optional = true

[features]
default = []
# Enables usage of std interfaces
std = []

[package.metadata.docs.rs]
features = ["std"]
